--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,14 @@ a:active{
     color: #232323;
 }
 
+.login a{
+    color: white;
+}
+
+.login a:hover {
+    text-decoration: underline;
+}
+
 .gray-container{
     padding-bottom: 80px;;
 }
@@ -212,3 +220,49 @@ a:active{
     background-color: white;
 }
 
+.register{
+    display: flex;
+    background-color: white;
+    color: #232323;
+    margin-top: -100px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    justify-content: center;
+}
+
+.register input[type=text], input[type=password]{
+    /* width: 100%; */
+    height: 2em;
+    font-size: 1.2em;
+    margin-top: 5px;
+    /* border: 2px solid #232323; */
+}
+
+.register input[type=text]:focus, input[type=password]:focus{
+    border: 2px solid #232323;
+}
+
+.register input[type=submit]{
+    background-color: #232323;
+    color: white;
+    border: none;
+    padding: 20px 50px;
+    cursor: pointer;
+    font-size: 1.2em;
+    border: 2px solid white;
+}
+
+.register input[type=submit]:hover{
+    background-color: white;
+    border: 2px solid #232323;
+    color: #232323;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
